--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-headaer />
-<app-user-input (calculate)="calculateInvestmentResults($event)" />
-<app-investment-results [results]="resultsData()" />
+<app-user-input />
+<app-investment-results />
